# quotient-python

./: .env.local  .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  oldenv  otel-collector-config.yaml  pyproject.toml  pytest.ini  tavily_quotient_agent.py  test_agno.py
.github/workflows/: lint.yml  lint_and_test.yml  publish_package.yml  python-app.yml  run_integration_tests.yml  test.yml  unit_test.yml
examples/: async_simple_evaluate.py  evaluation_demo.ipynb  example_jwt.py  example_logs.py  simple_evaluate.py
examples/hallucination_analysis/: langchain_hallucination_analyisis.py  simple_hallucination_analysis.py
examples/hallucination_analysis/example_api/: async_create.py  background_create.py  decorator.py  main.py
examples/hallucination_analysis/example_fast_api/: async_create.py  constants.py  main.py
examples/log-and-detect/: async_simple_logging.py  simple_logging.py  simple_logging_new_api.py
examples/log-and-detect/example_fast_api/: log.py  main.py
examples/logging/: async_simple_logging.py  simple_logging.py
examples/logging/example_fast_api/: README.md  constants.py  log.py  main.py
examples/tracing/: README.md  quotient_trace_agno_agent.py  quotient_trace_chroma.py  quotient_trace_openai.py  quotient_trace_openai_lazyinit.py  quotient_trace_pinecone.py  quotient_trace_qdrant.py
quotientai/: __init__.py  _constants.py  _context_utils.py  _enums.py  async_client.py  client.py  exceptions.py  types.py  utils.py
quotientai/cli/: __init__.py  entrypoint.py  format.py  imports.py
quotientai/cli/generate/: dataset.py  dataset.py~
quotientai/exceptions/: __init__.py  api.py
quotientai/resources/: __init__.py  auth.py  datasets.py  detections.py  logs.py  metrics.py  models.py  prompts.py  runs.py  tracing.py
quotientai/tracing/: __init__.py  core.py
quotientai/tracing/instrumentation/: README.md  __init__.py  base.py  chroma.py  pinecone.py  qdrant.py
tests/: __init__.py  conftest.py  constants.py  helpers.py  test_async_client.py  test_cli.py  test_client.py  test_deprecation_warnings.py  test_exceptions.py  test_sdk.py
tests/01_auth/: test_auth.py  test_keys.py
tests/02_resources/: test_datasets.py  test_metrics.py  test_models.py  test_prompt_templates.py  test_system_prompts.py
tests/03_jobs/: test_1_tasks.py  test_2_recipes.py  test_3_jobs.py
tests/04_shutdown/: test_clear_prev.py  test_nonprivileged.py  test_shutdown.py
tests/assets/: wh-statements-summarizations.csv
tests/cli/: test_entrypoint.py  test_imports.py
tests/resources/: test_auth.py  test_datasets.py  test_logs.py  test_metrics.py  test_models.py  test_prompts.py  test_runs.py  test_tracing.py  whitehouse-statements-summarizations.csv
