[tool.poetry]
name = "quotientai"
version = "0.1.0"
authors = [
    "Vic Weiss <vic@quotientai.co>",
    "Freddie Vargus <freddie@quotientai.co>",
    "Allison Kunz <allison@quotient.co>",
]
description = "CLI for evaluating large language models with Quotient"
readme = "README.md"
keywords = ["quotient", "evaluation", "llms", "machine learning", "ai"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
click = "^8.1.7"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quotient = "quotientai.cli.entrypoint:app"
