[tool.poetry]
name = "quotientai"
version = "0.2.6"
authors = [
    "Freddie Vargus <freddie@quotientai.co>",
    "Michael Goitia Sarmiento <mike@quotientai.co>",
    "Walden Bodtker <walden@quotientai.co>",
]
description = "CLI for evaluating large language models with Quotient"
readme = "README.md"
keywords = ["quotient", "evaluation", "llms", "machine learning", "ai", "logging", "hallucinations"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
click = "^8.1.7"
httpx = "^0.27.0"
tenacity = "<=9.0.0"
pyjwt = "^2.10.1"
pydantic = "^2.10.6"



[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quotient = "quotientai.cli.entrypoint:app"
