[tool.poetry]
name = "quotientai"
version = "0.4.8"
authors = [
    "Freddie Vargus <freddie@quotientai.co>",
    "Michael Goitia Sarmiento <mike@quotientai.co>",
    "Chiraag Rekhari <chiraag@quotientai.co>"
]
description = "Python library for tracing, logging, and detecting problems with AI Agents"
readme = "README.md"
keywords = ["quotient", "evaluation", "llms", "machine learning", "ai", "logging", "tracing", "hallucinations"]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
click = "^8.1.7"
httpx = ">=0.27.0"
tenacity = "<=9.0.0"
pyjwt = "^2.10.1"
pydantic = "^2.10.6"
opentelemetry-exporter-otlp = "^1.34.0"
opentelemetry-sdk = "^1.34.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.3"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quotient = "quotientai.cli.entrypoint:app"


